2025-10-16  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.6-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.6-alpha02: Casa Chimayo';git push
	git tag -a 5.3.6-alpha02 -m 'ncclimo/ncremap: E3SMU_PATH/lib; ncremap ncoidw fix, row/col chk sz fix';git push --tags

	* Fix 20250905 row/col sanity check to use correct size

	* ncks: map-checker print filename first so batch invocation informs reader of current map-file

2025-10-09  Charlie Zender  <zender@uci.edu>

	* Change ncremap nco_idw to new normalized name ncoidw. Fixes GitHub Issue #295 from Zachary Moon.

2025-10-08  Charlie Zender  <zender@uci.edu>

	* Add E3SMU_PATH/lib to ncclimo/ncremap

2025-09-29  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.6-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.6-alpha01: Alien: Earth';git push
	git tag -a 5.3.6-alpha01 -m 'Functionally identical to 5.3.5 plus nco_is_hrz() fix';git push --tags

	* nco_is_hrz() add lndgrid as valid 1D horizontal dimension, fixes ncclimo timeseries generation on bigrid data

2025-09-25  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5: Playground';git push
	git tag -a 5.3.5 -m 'all: quiet dbg output, --var_lst = -v; ncks: add mask_a/b dgn; ncclimo/ncremap: Fix OpenMP w/ GCC, add par doc, dgn bad map row/col, --npo refactor, plev xtr fl';git push --tags

	* Preliminary updates for 5.3.5-final

2025-09-24  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5-beta01: Ally Maz and Nicole Wild';git push
	git tag -a 5.3.5-beta01 -m 'all: quiet dbg output, --var_lst = -v; ncks: add mask_a/b dgn; ncclimo/ncremap: Fix OpenMP w/ GCC, add par doc, dgn bad map row/col, --npo refactor, plev xtr fl';git push --tags

	* Add regridding and map-generation scaling tests to parallelism section of Confluence page

2025-09-18  Charlie Zender  <zender@uci.edu>
