@@ -128,11 +128,11 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.3.6-alpha02
-@set doc-edition 5.3.6-alpha02
+@set nco-edition 5.3.6-alpha03
+@set doc-edition 5.3.6-alpha03
 @set copyright-years 1995--2025
 @set update-year 2025
-@set update-date 9 October 2025
+@set update-date 16 October 2025
 @set update-month October 2025
 
 @settitle @acronym{NCO} @value{nco-edition} User Guide
